--- a/src/main/resources/static/css/datapage.css
+++ b/src/main/resources/static/css/datapage.css
@@ -1,5 +1,5 @@
 .quadrant-container {
-    border: 1px solid lightgray;
+    /*border: 1px solid lightgray;*/
     padding: 10px;
     display: flex;
     flex-direction: column;
